Implement mode to show only one warning per message group #44